Mon Sep 29 03:46:51 2008  Minero Aoki  <aamine@loveruby.net>

	* convert all source codes to Java 5 using generics and foreach
	  stmt.

Sun Sep 28 07:19:43 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Options.java (getOutputFileName):
	  should use outputFileName always when linking, output file of
	  linking is always 1 file.

	* net/loveruby/cflat/compiler/Options.java: fixes compile error:
	  new method #isGeneratingPIE.

Sun Sep 28 07:06:37 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Compiler.java: implement -shared.

	* net/loveruby/cflat/compiler/Options.java: new option -shared.

	* net/loveruby/cflat/compiler/CodeGeneratorOptions.java: ditto.

	* net/loveruby/cflat/compiler/SourceFile.java: new method
	  #linkedFileName.

Sun Sep 28 05:07:30 2008  Minero Aoki  <aamine@loveruby.net>

	* implement PIC generation.

	* lib/Makefile: should generate PIC for libcbc.o.

	* net/loveruby/cflat/compiler/Compiler.java: pass
	  CodeGeneratorOptions to CodeGenerator.

	* net/loveruby/cflat/compiler/Options.java: new options -fpic,
	  -fPIC.

	* net/loveruby/cflat/compiler/CodeGenerator.java: use position
	  independent address for global variables, common symbols,
	  defined/undefined functions and string constants.

	* net/loveruby/cflat/compiler/CodeGeneratorOptions.java: new
	  class.

	* net/loveruby/cflat/asm/ELFConstants.java: new interface to
	  define ELF-related constants.

	* net/loveruby/cflat/asm/Assembler.java: new method #hidden.

	* net/loveruby/cflat/asm/Assembler.java: new overload
	  #section(s,s,s,s,s).

	* net/loveruby/cflat/asm/IndirectMemoryReference.java: offset may
	  not long, but Literal.

	* net/loveruby/cflat/asm/Literal.java: new method #isZero.

	* net/loveruby/cflat/asm/IntegerLiteral.java: ditto.

	* net/loveruby/cflat/asm/LabelRef.java: ditto.

	* net/loveruby/cflat/ast/ExprNode.java: new method
	  #shouldEvaluatedToAddres.
