@@ -1,6 +1,7 @@
 package net.loveruby.cflat.ast;
-import net.loveruby.cflat.asm.*;
 import net.loveruby.cflat.type.*;
+import net.loveruby.cflat.asm.LabelPool;
+import net.loveruby.cflat.asm.Label;
 
 public class CondExprNode extends ExprNode {
     protected ExprNode cond, thenExpr, elseExpr;
