@@ -1,6 +1,8 @@
 package net.loveruby.cflat.ast;
 import net.loveruby.cflat.type.Type;
-import net.loveruby.cflat.asm.*;
+import net.loveruby.cflat.asm.ImmediateValue;
+import net.loveruby.cflat.asm.AsmOperand;
+import net.loveruby.cflat.asm.MemoryReference;
 import net.loveruby.cflat.exception.*;
 
 abstract public class ExprNode extends Node {
