@@ -1,6 +1,9 @@
 package net.loveruby.cflat.ast;
 import net.loveruby.cflat.type.*;
-import net.loveruby.cflat.asm.*;
+import net.loveruby.cflat.asm.Label;
+import net.loveruby.cflat.asm.AsmOperand;
+import net.loveruby.cflat.asm.ImmediateValue;
+import net.loveruby.cflat.asm.MemoryReference;
 
 public class StringLiteralNode extends LiteralNode {
     protected String value;
