@@ -1,3 +1,7 @@
+Fri Oct 24 23:03:26 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/ast/*.java: minimize references to asm/*.
+
 Mon Sep 29 03:46:51 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* convert all source codes to Java 5 using generics and foreach
